force-app/main/default/objects/MY_NCR_user_log__c/MY_NCR_user_log__c.object-meta.xml
<CustomObject>
    <label>MY NCR user log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>MY NCR user log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MY NCR user logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>