force-app/main/default/objects/MY_NCR_user_log__c/fields/Account_MCN__c.field-meta.xml
<CustomField>
    <fullName>Account_MCN__c</fullName>
    <label>Account MCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>