force-app/main/default/objects/MY_NCR_user_log__c/fields/Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Email__c</fullName>
    <description>Quote Sales Rep Email Address stored to send the failure Email.</description>
    <label>Sales Rep Email</label>
    <type>Email</type>
</CustomField>